# SmartUnZip

./: .gitignore  Cargo.toml  LICENSE  README.md  appsettings.json  build.bat  build.sh  dev.bat
.cargo/: config.toml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: archive.rs  config.rs  files.rs  main.rs  registry.rs  ui.rs
cli/src/extractor/: bandizip.rs  mod.rs  sevenzip.rs
src/: archive.rs  config.rs  files.rs  main.rs  registry.rs  ui.rs  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  registry.rs
src/extractor/: mod.rs  sevenzip.rs
ui/: index.html  main.js  styles.css
