[package]
name = "smartunzip-cli"
version = "1.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
winreg = "0.52"
regex = "1"
anyhow = "1"
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
