[package]
name = "smartunzip-cli"
version = "1.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
regex = "1"
anyhow = "1"
encoding_rs = "0.8"
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
strip = true
