[workspace]
resolver = "2"
members = [
    "cli",
    "src-tauri",
]

[workspace.package]
version = "1.2.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
ureq = { version = "2", features = ["json"] }
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
