[package]
name = "smartunzip-cli"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
colored = "2"
regex = "1"
anyhow = "1"
encoding_rs.workspace = true
ureq.workspace = true

[target.'cfg(windows)'.dependencies]
winreg.workspace = true
